--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Анимация при ховере на аватарки</title>
-    <link rel="stylesheet" href="all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="square">
@@ -16,7 +16,7 @@
             <div class="content__box active" id="content1">
                 <div class="card">
                     <div class="card__img-box">
-                        <img src="img1.jpg" alt="Виталий Котов">
+                        <img src="img/img1.jpg" alt="Виталий Котов">
                     </div>
                     <div class="card__content">
                         <h2 class="card__title">Виталий Котов<br><b>Дизайнер</b></h2>
@@ -48,7 +48,7 @@
             <div class="content__box" id="content2">
                 <div class="card">
                     <div class="card__img-box">
-                        <img src="img2.jpeg" alt="Анатолий Кунин">
+                        <img src="img/img2.jpeg" alt="Анатолий Кунин">
                     </div>
                     <div class="card__content">
                         <h2 class="card__title">Анатолий Кунин<br><b>Бекендер</b></h2>
@@ -80,7 +80,7 @@
             <div class="content__box" id="content3">
                 <div class="card">
                     <div class="card__img-box">
-                        <img src="img3.jpg" alt="Вячеслав Кононенко">
+                        <img src="img/img3.jpg" alt="Вячеслав Кононенко">
                     </div>
                     <div class="card__content">
                         <h2 class="card__title">Вячеслав Кононенко<br><b>Фронтендер</b></h2>
@@ -112,7 +112,7 @@
             <div class="content__box" id="content4">
                 <div class="card">
                     <div class="card__img-box">
-                        <img src="img4.jpg" alt="Игорь Дружный">
+                        <img src="img/img4.jpg" alt="Игорь Дружный">
                     </div>
                     <div class="card__content">
                         <h2 class="card__title">Игорь Дружный<br><b>Тестировщик</b></h2>
@@ -152,19 +152,19 @@
         </div>
         <div class="icons">
             <div class="icons__icon active" data-id="content1">
-                <img class="icons__img" src="img1.jpg" alt="Виталий Котов">
+                <img class="icons__img" src="img/img1.jpg" alt="Виталий Котов">
             </div>
             <div class="icons__icon" data-id="content2">
-                <img class="icons__img" src="img2.jpeg" alt="Анатолий Кунин">
+                <img class="icons__img" src="img/img2.jpeg" alt="Анатолий Кунин">
             </div>
             <div class="icons__icon" data-id="content3">
-                <img class="icons__img" src="img3.jpg" alt="Вячеслав Кононенко">
+                <img class="icons__img" src="img/img3.jpg" alt="Вячеслав Кононенко">
             </div>
             <div class="icons__icon" data-id="content4">
-                <img class="icons__img" src="img4.jpg" alt="Игорь Дружный">
+                <img class="icons__img" src="img/img4.jpg" alt="Игорь Дружный">
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
